--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+@@ -0,0 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Runge-Kutta 4th Order Method Solver</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
