--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <div class="form-group">
             <label for="functionInput">Enter your function:</label>
-            <input type="text" id="functionInput" placeholder="t - y" class="function-input" oninput="adjustWidth(this)">
+              <input type="text" id="functionInput" placeholder="t - y" oninput="adjustWidth(this)">
         </div>
         
         <div class="form-group">
